[project]
name = "xkcd-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord>=2.3.2",
    "discord-ext-bot>=1.0.1",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "numpy>=2.3.3",
    "onnxruntime>=1.23.0",
    "optimum[onnxruntime]>=1.27.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
]
