[project]
name = "xkcd-bot"
version = "0.1.0"
dependencies = [
    "discord>=2.3.2",
    "discord-ext-bot>=1.0.1",
    "python-dotenv>=0.9.9",
    "numpy>=2.3.3",
    "onnxruntime>=1.23.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "tokenizers>=0.20.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
build-cache = [
    "sentence-transformers>=5.1.1",
    "einops>=0.8.1"
]
